// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: All should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          {
            "fontSize": 10,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 26,
        },
        undefined,
      ]
    }
    testID="unread-badge-+99"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          {
            "fontSize": 10,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      +99
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-+999"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      +999
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E1053C",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="mention-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E09425",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="group-mention-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#148B3B",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: DifferentMentionTypes should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E1053C",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="mention-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E09425",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="group-mention-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E1053C",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="mention-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#148B3B",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E1053C",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E09425",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: Normal should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginLeft": 10,
          "paddingHorizontal": 7,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 22,
        },
        undefined,
      ]
    }
    testID="unread-badge-+999"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      +999
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: Small should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          {
            "fontSize": 10,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#2FA44A",
          "borderRadius": 11,
          "minWidth": 26,
        },
        undefined,
      ]
    }
    testID="unread-badge-+99"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "textAlign": "left",
          },
          {
            "fontSize": 10,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      +99
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: Themes should match snapshot 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#2FA44A",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#E1053C",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#E09425",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="group-mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#148B3B",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#2FA44A",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#E1053C",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#B87F1F",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="group-mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#148B3B",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#2FA44A",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#E1053C",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#B87F1F",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="group-mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 10,
            "paddingHorizontal": 7,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#148B3B",
            "borderRadius": 11,
            "minWidth": 22,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "700",
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>,
]
`;
